# gemmi

./: .appveyor.yml  .clang-tidy  .editorconfig  .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  CMakeLists.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  cif.hh  cifgz.hh  convert.cc  convert.cpp  ddl.hh  drg.md  elem.hh  grep.cpp  ideas.md  mask.cpp  mmcif.hh  model.hh  numb.hh  options.h  paper.bib  paper.md  plan.txt  pygemmi.cc  pygemmi.cpp  pyproject.toml  read_pdb.hh  run-tests.sh  setup.cfg  setup.py  test_symmetry.py  to_cif.hh  to_json.cc  to_json.hh  (+7 more)
.github/: codeql.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  testwheel.yml  wheels.yml  wheels2.yml
benchmarks/: elem.cpp  mod.cpp  niggli.cpp  pdb.cpp  resinfo.cpp  round.cpp  smat33.cpp  stoi.cpp  sym.cpp  writecif.cpp
c_fortran/: Makefile  fsym.f90  ftest.f90  gemmi.yaml  write.cpp
ccd/: ACEDRG_ROLE.md  AGENTS.md  try.sh  use.py
docs/: .gitignore  Doxyfile  Makefile  P0C805.fasta  about.rst  align-help.txt  analysis.rst  api.rst  bfit-help.txt  blobs-help.txt  btest-help.txt  build_api_reference.sh  build_api_refrence.sh  cell.rst  chemistry.rst  cif-intro.rst  cif-parser.rst  cif-utils.rst  cif.rst  cif2json-help.txt  cif2mtz-help.txt  cif2mtz-spec.txt  cifdiff-help.txt  components.cif  conf.py  contact-help.txt  contents-help.txt  convert-help.txt  crd-help.txt  custom.css  doc_cif_cc.cpp  doc_elem.cpp  doc_mutate.cpp  doc_structure.cpp  doc_sym.cpp  drg-help.txt  ecalc-help.txt  fprim-help.txt  fprime-help.txt  gemmi-help.txt  (+43 more)
docs/_static/: custom.css
docs/_templates/: page.html
docs/code/: cell.cpp  cif_cc.cpp  elem.cpp  maybegz.cpp  mutate.cpp  newmtz.cpp  resinfo.cpp  smcif.cpp  structure.cpp  sym.cpp
examples/: __main__.py  aafreq.py  auth_label.cc  auth_label.cpp  ccd_gi.py  ccd_subgraph.py  check_conn.cc  check_conn.cpp  check_symmetry.cpp  cif_i_sigi.py  col_order.py  from_json.py  hello.cc  hello.py  i_sigi.py  long_geom.py  map2mtz.py  maskcheck.py  maskdiff.py  matthews.py  merge_mtz_mmcif.py  monomers.py  mtrix_iso.py  mtz_i_sigi.py  multiproc.py  patterson_slice.py  qq-plot.py  rama_gather.py  rama_plot.py  read_cif.py  refln-stats.py  simple-search.py  simple_search.py  specpos.cc  ssbond.cc  sub_ccd.py  to_rdkit.py  torsion_in_ring.cpp  util.py  weight.py  (+1 more)
fortran/: Makefile  ctest.c  ftest.f90  ftest_grid.f90  gemmi.f90  gemmi.yaml  grid.cpp  grid.h  symmetry.cpp  symmetry.h  write.cpp
include/gemmi/: ace_carborane.hpp  ace_cc.hpp  ace_graph.hpp  ace_internal.hpp  acedrg_tables.hpp  addends.hpp  align.hpp  assembly.hpp  asudata.hpp  asumask.hpp  atof.hpp  atox.hpp  bessel.hpp  binner.hpp  blob.hpp  bond_idx.hpp  bulksol.hpp  c4322.hpp  calculate.hpp  cc_adj.hpp  ccp4.hpp  ccp4ener.hpp  cellmethod.hpp  cellred.hpp  chemcomp.hpp  chemcomp_xyz.hpp  cif.hh  cif.hpp  cif2mtz.hpp  cifdoc.hpp  cifgz.hh  cifgz.hpp  conn.hpp  contact.hpp  crd.hpp  crystal.hpp  ddl.hh  ddl.hpp  delaunay.hpp  dencalc.hpp  (+118 more)
prog/: align.cpp  blobs.cpp  cif2json.cpp  cif2mtz.cpp  cifdiff.cpp  cifmod.h  contact.cpp  contents.cpp  convert.cpp  crd.cpp  diff.cpp  drg.cpp  ecalc.cpp  fprime.cpp  grep.cpp  h.cpp  histogram.h  json2cif.cpp  main.cpp  map.cpp  map2sf.cpp  mapcoef.cpp  mapcoef.h  mask.cpp  merge.cpp  mixmtz.cpp  mondiff.cpp  monlib_opt.cpp  monlib_opt.h  mtz.cpp  mtz2cif.cpp  options.cpp  options.h  output.cpp  placeh.cpp  prep.cpp  reindex.cpp  residues.cpp  rmsz.cpp  set.cpp  (+11 more)
python/: Makefile  acedrg_tables.cpp  align.cpp  array.h  arrvec.h  ccp4.cpp  chemcomp.cpp  cif.cpp  cif_read.cpp  common.h  custom.cpp  elem.cpp  gemmi.cpp  grid.cpp  hkl.cpp  make_iterator.h  meta.cpp  meta.h  miller_a.h  mm.cpp  mmread.cpp  mol.cpp  monlib.cpp  mtz.cpp  read.cpp  recgrid.cpp  refine.cpp  scaling.cpp  search.cpp  serial.h  sf.cpp  small.cpp  smallmol.cpp  smcif.cpp  stubs.pat  sym.cpp  topo.cpp  tostr.hpp  unitcell.cpp  write.cpp
python/gemmi/: __init__.py  fetch.py
src/: Makefile  ace_carborane.cpp  ace_carborane.hpp  ace_cc.cpp  ace_graph.cpp  ace_internal.hpp  acedrg_tables.cpp  align.cpp  assembly.cpp  bfit.cpp  blobs.cpp  btest.cpp  calculate.cpp  cc_adj.cpp  ccp4.cpp  ccp4ener.cpp  chemcomp.cpp  chemcomp_xyz.cpp  cif2json.cpp  cif2mtz.cpp  cifmod.h  contact.cpp  contents.cpp  convert.cpp  crd.cpp  crdrst.cpp  ddl.cpp  dssp.cpp  eig3.cpp  ener_lib.cpp  flat.cpp  fprim.cpp  fprime.cpp  grep.cpp  gz.cpp  h.cpp  histogram.h  input.cpp  input.h  intensit.cpp  (+52 more)
tests/: 1011031.cif  1pfe.json  2013551.cif  2242624.cif  2242624.hkl  3dg1_final.cif  3≈π.json  4003024.cif  4aap-sf-subset.cif  5e5z.mtz  5i55.cif  5i55_tiny.ccp4  HEM.cif  HEN.cif  INTEGRATE-tiny.HKL  SO3.cif  ace_graph.cpp  cc12-hkl.cif  cif.cpp  common.py  compare_pdb.sh  disulf.cpp  ener_lib.cif  eol-test.cif  gęś¼.cif  main.cpp  misc.cif  misc.json  mmcif_pdbx_v50_frag.dic  pdb1gdr.ent  r5wkdsf.ent  test_ace.py  test_align.py  test_bool.py  test_chemcomp.py  test_cif.py  test_cif_json.py  test_cif_read.py  test_elem.py  test_examples.py  (+17 more)
tests/ccd/: ALA.cif  ASP.cif  ATP.cif  CYS.cif  HEM.cif  HIS.cif  SEC.cif  TRP.cif  TYR.cif
tests/list/: mon_lib_list.cif
tools/: FindZLIB_NG.cmake  ace_xyz_checks.py  ace_xyz_regression.py  bench_elem.cpp  bench_mod.cpp  bench_round.cpp  bench_sym.cpp  check_serialize.py  chemcomp_cycle_rescue.py  chemcomp_planar_assemble.py  chemcomp_planar_chain_assemble.py  chemcomp_planar_cores.py  chemcomp_planar_embed.py  chemcomp_planar_fragments.py  chemcomp_torsion_optimize.py  chemcomp_xyz_stats.py  cmp-size.py  compare_mask.sh  compare_pdb.sh  compare_record.sh  compare_wheels.py  crd-diff.py  docs-help.sh  gemmi-config.cmake.in  gen_reciprocal_asu.py  gen_sg_table.py  header-list.py  linux-wheels.sh  ob_spacegroups.py  pdb_ids.txt  refmac-crd.sh  release.txt  resinfo.py  rstdiff.py  syminfo.py  upstream-check.py
wasm/: .ignore  Makefile  README.md  blob.test.js  blob_search.h  cell.cpp  common.h  gemmi.cpp  gemmi.d.ts  iso.cpp  isosurface_tables.h  map.cpp  mol.cpp  mol.test.js  mtz.d.ts  mtz_fft.cpp  mtz_fft.test.js  package.json  post.js  pre.js
wasm/mtz/: README.md  compile.sh  pre.js  (+2 more)
(+9 files in other folders)
